--- a/main.html
+++ b/main.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Table Example</title>
+    <!-- Bootstrap CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!--    Write your code here -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./script.js"></script>
+    <div class="container mt-5">
+        <h1 class="text-center"> List of all transactions</h1>
+        <table class="table table-hover">
+            <thead class="table-dark">
+                <tr>
+                    <th>#</th>
+                    <th>From</th>
+                    <th>To</th>
+                    <th>Amount($)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><b>1</b></td>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>1000</td>
+                </tr>
+                <tr>
+                    <td><b>2</b></td>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>1500</td>
+                </tr>
+                <td><b>3</b></td>
+                <td>Jack</td>
+                <td>John</td>
+                <td>2000</td>
+            </tbody>
+            <tfoot class="table-light">
+                <tr>
+                    <td colspan="4" id="total" class="font-monospace text-end fw-bold">Total 4000</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
