--- a/main.html
+++ b/main.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Table Example</title>
-    <!-- Bootstrap CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center"> List of all transactions</h1>
-        <table class="table table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>#</th>
-                    <th>From</th>
-                    <th>To</th>
-                    <th>Amount($)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><b>1</b></td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>1000</td>
-                </tr>
-                <tr>
-                    <td><b>2</b></td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>1500</td>
-                </tr>
-                <td><b>3</b></td>
-                <td>Jack</td>
-                <td>John</td>
-                <td>2000</td>
-            </tbody>
-            <tfoot class="table-light">
-                <tr>
-                    <td colspan="4" id="total" class="font-monospace text-end fw-bold">Total 4000</td>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
+    <!--    Write your code here -->
+	<div class="container">
+
+  
+  <table class="table table-responsive table-hover">
+	<caption>List of all transactions</caption>
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">From</th>
+		<th scope="col">To</th>
+        <th scope="col">Amount($)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Mark</td>
+        <td>Otto</td>
+		<td>1000</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Jacob</td>
+        <td>Thornton</td>
+		<td>1500</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Jack</td>
+        <td>John</td>
+		<td>2000</td>
+      </tr>
+    </tbody>
+    <tfoot class="table-light">
+      <tr>
+        <td colspan="3" class="font-monospace text-end fw-bold" id="total">Total 4000</td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
