--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
   
   <table class="table table-responsive table-hover">
-	
+	<caption>List of all transactions</caption>
     <thead class="table-dark">
       <tr>
         <th scope="col">#</th>
